# pycrcmanip

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  build.py  pyproject.toml  setup.py
.github/workflows/: build.yml  crcmanip.yml
crcmanip/: __main__.py  algorithm.py  cli.py  crc.py  fastcrc.c  utils.py
crcmanip/tests/: conftest.py  test_algorithm.py  test_cli.py  test_crc.py  test_main.py  test_utils.py
